Update `.gitignore` file
Updates `.gitignore` file to ignore files and directories that should not be committed to the repository.

This pull request changes the following file(s):

- Update `.gitignore`

Signed-off-by: Nathanael Esayeas <nathanael.esayeas@protonmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -3,14 +3,20 @@
 *.env
 *.env*
 .DS_Store
+.cache/
+.devenv/
 .direnv/
 .dotenv/
 .env
 .idea/
 .phpactor.json
+.phpunit.cache/
+.phpunit.result.cache
 .vscode/
 build/
+infection.json5
 node_modules/
+phpunit.xml
 result
 result-*
 vendor/
@@ -18,7 +24,6 @@ vendor/
 # Allow
 
 !.env.dist
-!.env.example
 !.env.me
 !.env.vault
 !.envrc
